vision section commit

--- a/styles/assignment-1.css
+++ b/styles/assignment-1.css
@@ -8,6 +8,20 @@
     margin: 0;
     padding: 0;
 }
+body{
+    
+}
+.common-card{
+    padding: 32px;
+    border-radius: 16px;
+    width: 325px;
+    height: auto;
+}
+.btn-primary{
+    border-radius: 8px;
+    padding: 11px 20px;
+    border-style: none;
+}
 /* Header Section: 1st Task */
 .bd{
     display: flex;
@@ -105,9 +119,9 @@
 }
 /* main Section: 2nd Task */
 .vision{
-    width: 80%;
-    margin: 80px 160px;
-    align-items: center;
+    /* width: 80%; */
+    margin: 80px 20px;
+ 
 }
 .vision-title{
     font-size: 40px;
@@ -120,4 +134,72 @@
     color: rgba(14, 14, 14, 0.7);
     margin-bottom: 32px;
 }
-/* Card Section */
+/* Vision Card Section */
+.vision-cards{
+    display: flex;
+    gap: 24px;
+    justify-content: space-around;
+}
+.v-card{
+    height: 64px;
+    width: 64px;
+}
+.v-title{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgba(14, 14, 14, 0.8);
+    margin-top: 24px;
+    margin-bottom: 12px;
+}
+.v-subtitle{
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    margin-bottom: 24px;
+}
+.v-btn-1{
+    color: #FFFFFF;
+    background-color: #5490F5;
+}
+.v-btn-2{
+    color: #FFFFFF;
+    background-color: #09A15C;
+}
+.v-btn-3{
+    color: #FFFFFF;
+    background-color: #FFC239;
+}
+.card-no-1{
+    background-color: rgba(84, 144, 245, 0.2);
+}
+.card-no-2{
+    background-color: #C6E4D6;
+}
+.card-no-3{
+   background-color:#F7EBCF ;
+}
+/* Qoute of DR. Yunus */
+.qoute{
+    width: 1280px;
+    margin: 32px 100px;
+    border: 1px solid gray;
+    border-radius: 18px;
+    padding: 48px 24px;
+    background-color: #faf8f8;
+    background-image: url('../assets/quote-bg.png');
+    background-repeat: no-repeat;
+}
+.info-title{
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 16px;
+    margin-bottom: 12px;
+}
+.name{
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 20px;
+    margin-bottom: 4px;
+}
+.sub-name{
+    color: rgba(14, 14, 14, 0.6);
+    font-size: 16px;
+
+}
