--- a/styles/assignment-1.css
+++ b/styles/assignment-1.css
@@ -8,14 +8,15 @@
     margin: 0;
     padding: 0;
 }
-body{
-    
+html{
+    background-color: rgb(241, 241, 241);
 }
 .common-card{
     padding: 32px;
     border-radius: 16px;
     width: 325px;
     height: auto;
+    background-color: #FFFFFF;
 }
 .btn-primary{
     border-radius: 8px;
@@ -184,9 +185,10 @@ body{
     border: 1px solid gray;
     border-radius: 18px;
     padding: 48px 24px;
-    background-color: #faf8f8;
+    background-color: #FFFFFF;
     background-image: url('../assets/quote-bg.png');
     background-repeat: no-repeat;
+    align-content: center;
 }
 .info-title{
     color: rgba(14, 14, 14, 0.8);
@@ -202,4 +204,14 @@ body{
     color: rgba(14, 14, 14, 0.6);
     font-size: 16px;
 
+}
+.recent-news{
+    width: 1280px;
+
+}
+.innovation-1{
+    display: flex;
+}
+.innovation-2{
+    display: flex;
 }
