--- a/styles/assignment-1.css
+++ b/styles/assignment-1.css
@@ -180,8 +180,8 @@ html{
 }
 /* Qoute of DR. Yunus */
 .qoute{
-    width: 1280px;
-    margin: 32px 100px;
+    width: 80%;
+    margin: 0 auto;
     border: 1px solid gray;
     border-radius: 18px;
     padding: 48px 24px;
@@ -205,13 +205,63 @@ html{
     font-size: 16px;
 
 }
-.recent-news{
-    width: 1280px;
 
+/* Recent News Section */
+.recent-news{
+    width: 80%;
+    margin: 0 auto;
+
+
+}
+.section-title{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0E0E0E;
+    margin-top: 80px;
+    margin-bottom: 24px;
+}
+.section-subtitle{
+    font-size: 16px;
+    color: #0E0E0E;
+    opacity: 70%;
+    margin-bottom: 32px;
 }
 .innovation-1{
     display: flex;
+    gap: 32px;
+    padding: 48px;
+    background-color: #FFFFFF;
+    margin-bottom: 24px;
+    border-radius: 24px;
 }
 .innovation-2{
     display: flex;
+    gap: 32px;
+    padding: 48px;
+    background-color: #FFFFFF;
+    border-radius: 24px;
+}
+.innovation-img{
+    border-radius: 24px;
+}
+.news-title{
+    font-size: 32px;
+    font-weight: bold;
+    color: rgba(14, 14, 14, 0.8);
+
+}
+.news-subtitle{
+    font-size: 16px;
+    color: rgba(14, 14, 14, 0.7);
+    padding: 6px;
+}
+.btn-sec{
+    font-size: 18px;
+    font-weight: 600;
+    color: #FFFFFF;
+    background-color: #006A50;
+    padding: 13px 26px;
+    border-radius: 8px;
+    border-style: none;
+    margin-top: 32px;
 }
