second final commit

--- a/styles/assignment-1.css
+++ b/styles/assignment-1.css
@@ -327,8 +327,11 @@ html{
 }
 .input-donation{
     font-size: 20px;
-    padding: 20px 422px;
+    /* padding: 20px 450px; */
     border-style: none;
+    width: 90%;
+    text-align: center;
+    padding: 20px;
     
 }
 /* Footer Section */
